fix on mobile

--- a/src/frontend/styles/_shared/_mobile.styl
+++ b/src/frontend/styles/_shared/_mobile.styl
@@ -37,8 +37,9 @@ body
 @media (max-width: 700px)
   
   body
-    
+    padding-top: 0!important
     .dynamic_wrapper
+      padding-top: 55px
       background: #ececec
       transition: transform .3s ease-out
       transform: translate3d(0, 0, 0)
